@@ -5,7 +5,7 @@ Title: Export Tables to LaTeX or HTML
 Author: David B. Dahl <dahl@stat.byu.edu>
 Maintainer: David Scott <d.scott@auckland.ac.nz>
 Imports: stats, utils
-Suggests: knitr, lsmeans
+Suggests: knitr, lsmeans, spdep, splm, sphet
 VignetteBuilder: knitr
 Description: Coerce data to LaTeX and HTML tables.
 URL: http://xtable.r-forge.r-project.org/
