@@ -43,3 +43,14 @@ S3method("xtable", "summary.prcomp")
 S3method("xtable", "coxph")
 S3method("xtable", "ts")
 S3method("xtable", "zoo")
+S3method("xtable", "sarlm")
+S3method("xtable", "summary.sarlm")
+S3method("xtable", "gmsar")
+S3method("xtable", "summary.gmsar")
+S3method("xtable", "stsls")
+S3method("xtable", "summary.stsls")
+S3method("xtable", "splm")
+S3method("xtable", "summary.splm")
+S3method("xtable", "sphet")
+S3method("xtable", "summary.sphet")
+
